--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=SistemaDeAprendizaje
+spring.datasource.url=jdbc:postgresql://localhost:5432/sistema_aprendizaje
+spring.datasource.username=postgres
+spring.datasource.password=sapo123
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
